--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
     <div class="header__nav">
       <ul class="list-reset header__list flex">
         <li class="header__item">
-          <a href="#" class="header__link"> About </a>
+          <a href="#" class="header__link"> Challenges </a>
         </li>
         <li class="header__item">
           <a href="#" class="header__link"> Contact </a>
@@ -15,7 +15,14 @@
       </ul>
     </div>
     <div class="header__program">
-      <button class="btn-reset btn header__program-btn">Today's plan</button>
+      <button
+        class="btn-reset btn header__program-btn"
+        id="plan"
+        data-graph-path="second"
+        data-graph-animation="custom"
+      >
+        Today's plan
+      </button>
     </div>
   </div>
 </header>
