--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,6 +1,20 @@
 .header {
   margin-top: 40px;
+  animation: 1.5s ease-out 0s 1 headerFromTop;
 
+  @keyframes headerFromTop {
+    0% {
+      margin-top: -100px;
+      transform: translateY(-100%);
+    }
+    50% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
   &--position {
     position: absolute;
     left: 0;
@@ -25,7 +39,7 @@
 
   &__item {
     position: relative;
-    
+
     &:before {
       content: "";
       position: absolute;
